k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-deployment
  ports:
  - port: 3306
    targetPort: 3306
