k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-deployment
  ports:
  - port: 8080
    targetPort: 80
